[tool.poetry]
name = "nft-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
httpx = "^0.22.0"
pyTelegramBotAPI = "^4.4.0"
pytz = "^2022.1"
py-cord = "^2.0.0b7"
discord = "^1.7.3"
numpy = "^1.22.3"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
